Исправление адреса normalize.css

--- a/sass/_config.sass
+++ b/sass/_config.sass
@@ -16,7 +16,8 @@ $blue: #4276FF
 
 // IMPORT SECTION
 
-@import '../libs/normalize.css/normalize.css' //Normalize CSS
+// @import '../libs/normalize.css/normalize.css' //Normalize CSS
+@import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css') //Normalize CSS
 
 // @import 'node_modules/bootstrap/scss/bootstrap-reboot.scss' // Bootstrap Reboot collection
 // @import 'node_modules/bootstrap/scss/mixins/_breakpoints.scss' // Bootstrap Breakpoints mixin
@@ -81,6 +82,8 @@ body
 a,
 .btn
 	transition: .2s ease-in-out
+	appearance: none
+	outline: none
 
 a
 	font-weight: 900
