--- a/sass/_config.sass
+++ b/sass/_config.sass
@@ -181,8 +181,8 @@ a,
 button,
 .btn
 	transition: .2s ease-in-out
-	-webkit-tap-highlight-color: transparent
-	outline: none
+	-webkit-tap-highlight-color: transparent !important
+	outline: none !important
 
 a
 	font-weight: 900
