Убрал outline у кнопок

--- a/sass/_config.sass
+++ b/sass/_config.sass
@@ -183,6 +183,7 @@ button,
 	transition: .2s ease-in-out
 	-webkit-tap-highlight-color: transparent !important
 	outline: none !important
+	border: none
 
 a
 	font-weight: 900
