--- a/sass/_enter.sass
+++ b/sass/_enter.sass
@@ -4,7 +4,14 @@
   width: 100%
   max-width: calc(327px + 50px)
   margin: 38px auto
+  .container
+    display: grid
+    gap: 20px
+  
   &__header
+    width: 100%
+    display: grid
+    justify-content: center
     text-align: center
     position: relative
 
@@ -42,18 +49,35 @@
 
   &__main
     width: 100%
-    .sign-up
-      display: grid
-      gap: 28px
+    display: grid
+    gap: 28px
     
-    .registration
-      &-form
-        width: 100%
-        margin-top: 100px
-        display: grid
-        gap: 20px
-        .btn
-          margin-top: 18px
+  .registration-form
+    width: 100%
+    margin-top: 100px
+    display: grid
+    gap: 20px
+    .btn
+      margin-top: 18px
+
+.sign-up
+
+.registration
+  .enter__header
+    .subtitle
+      max-width: 250px
+
+.sign-in
+  .enter__header
+    .title
+      margin-bottom: 10px
+
+.forgot-password-form
+
+.back-link
+  width: 100%
+  display: flex
+  justify-content: center
 
 .password
   position: relative
@@ -88,7 +112,16 @@
     color: #000
     a
       font-weight: inherit
-
+.or-wrapper
+  width: 100%
+  display: grid
+  justify-items: center
+  gap: 4px
+  span
+    font-weight: normal
+    font-size: 14px
+    line-height: 1
+    color: #000000
 .or
   width: 100%
   height: 21px
@@ -227,3 +260,30 @@
   background: url("data:image/svg+xml,%3Csvg width='18' height='14' viewBox='0 0 18 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M7.77527 0.724684C8.01935 0.968762 8.01935 1.36449 7.77527 1.60857L3.00888 6.37496L16.5 6.37496C16.8452 6.37496 17.125 6.65478 17.125 6.99996C17.125 7.34514 16.8452 7.62496 16.5 7.62496L3.00888 7.62496L7.77528 12.3914C8.01935 12.6354 8.01935 13.0312 7.77528 13.2752C7.5312 13.5193 7.13547 13.5193 6.89139 13.2752L1.05806 7.4419C0.813981 7.19782 0.813981 6.8021 1.05806 6.55802L6.89139 0.724684C7.13547 0.480607 7.5312 0.480607 7.77527 0.724684Z' fill='%23716B7E'/%3E%3C/svg%3E%0A") no-repeat
   background-position: center
   background-size: contain
+
+.forget
+  width: 100%
+  height: auto
+  display: flex
+  justify-content: flex-end
+  &__link
+    line-height: 1
+
+.round-btns
+  width: 100%
+  display: flex
+  align-items: center
+  justify-content: center
+  gap: 28px
+  .btn
+    width: 47px
+    height: 47px
+    padding: 0
+    border-radius: 50%
+    display: flex
+    justify-content: center
+    align-items: center
+    svg
+      margin: 0
+  &+.enter-question
+    margin: 0
