--- a/sass/_config.sass
+++ b/sass/_config.sass
@@ -87,40 +87,36 @@ input, textarea
 label
 	position: relative
 
-.error
+.input-box
 	width: 100%
+	position: relative
+
+.error
+	width: auto
 	position: absolute
 	top: -16px
-	left: 0
-	display: grid
-	align-items: center
-	justify-items: end
-	&__message
-		width: auto
-		padding-left: 24px
+	right: 0
+	padding-left: 24px
+	font-size: 12px
+	font-weight: 400
+	line-height: 1
+	opacity: 0
+	visibility: hidden
+	z-index: -1
+	transition: .2s
+	&::before
+		content: ''
+		width: 16px
+		height: 13px
 		position: absolute
-		right: 0
-		top: 0
-		font-size: 12px
-		font-weight: 400
-		line-height: 1
-		opacity: 0
-		visibility: hidden
-		z-index: -1
-		transition: .2s
-		&::before
-			content: ''
-			width: 16px
-			height: 13px
-			position: absolute
-			left: 0
-			top: 50%
-			transform: translateY(-60%)
-			background: url("data:image/svg+xml,%3Csvg width='16' height='13' viewBox='0 0 16 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.666504 13H15.3332L7.99984 0.333334L0.666504 13ZM8.6665 11H7.33317V9.66667H8.6665V11ZM8.6665 8.33333H7.33317V5.66667H8.6665V8.33333Z' fill='%23F03738'/%3E%3C/svg%3E%0A") no-repeat
-		&.active
-			opacity: 1
-			visibility: visible
-			z-index: 1
+		left: 0
+		top: 50%
+		transform: translateY(-60%)
+		background: url("data:image/svg+xml,%3Csvg width='16' height='13' viewBox='0 0 16 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.666504 13H15.3332L7.99984 0.333334L0.666504 13ZM8.6665 11H7.33317V9.66667H8.6665V11ZM8.6665 8.33333H7.33317V5.66667H8.6665V8.33333Z' fill='%23F03738'/%3E%3C/svg%3E%0A") no-repeat
+	&.active
+		opacity: 1
+		visibility: visible
+		z-index: 1
 
 input[type='checkbox']
 	display: none
