--- a/sass/_config.sass
+++ b/sass/_config.sass
@@ -156,6 +156,7 @@ input[type='checkbox']
 		display: flex
 		border: 2px solid #636366
 		border-radius: 5px
+		cursor: pointer
 		transition: .2s
 	&:checked + span
 		background: $blue !important
