--- a/sass/_config.sass
+++ b/sass/_config.sass
@@ -137,6 +137,35 @@ label
 		visibility: visible
 		z-index: 
 		transform: scale(1)
+	&-inner
+		width: auto
+		padding-left: 25px
+		position: absolute
+		top: -15px
+		right: 0
+		font-size: 12px
+		font-weight: 400
+		line-height: 1
+		color: #000
+		opacity: 0
+		visibility: hidden
+		z-index: -1
+		transform: scale(0)
+		transition: transform .2s
+		&::before
+			content: ''
+			width: 16px
+			height: 13px
+			position: absolute
+			left: 0
+			top: 50%
+			transform: translateY(-60%)
+			background: url("data:image/svg+xml,%3Csvg width='16' height='13' viewBox='0 0 16 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.666504 13H15.3332L7.99984 0.333334L0.666504 13ZM8.6665 11H7.33317V9.66667H8.6665V11ZM8.6665 8.33333H7.33317V5.66667H8.6665V8.33333Z' fill='%23F03738'/%3E%3C/svg%3E%0A") no-repeat
+		&.active
+			opacity: 1
+			visibility: visible
+			z-index: 
+			transform: scale(1)
 
 .registration
 	&-form
@@ -149,9 +178,8 @@ label
 input[type='checkbox']
 	display: none
 	&+span
-		width: 25px
-		height: 25px
-		padding: 3px
+		width: 23px
+		height: 23px
 		position: relative
 		display: flex
 		border: 2px solid #636366
@@ -166,7 +194,7 @@ input[type='checkbox']
 		width: 8px
 		height: 12px
 		position: absolute
-		top: 7px
+		top: 6px
 		left: 50%
 		transform: rotate(45deg) translateX(-70%)
 		border-right: 2px solid #fff
