--- a/sass/_config.sass
+++ b/sass/_config.sass
@@ -213,7 +213,7 @@ input[type='checkbox']
 		border-right: 2px solid #fff
 		border-bottom: 2px solid #fff
 
-.chbx--error
+.chbx.invalid
 	span
 		border-color: rgba(255, 0, 0, 1) !important
 
