Удаление в дизайне отступа под хедером registration.html

--- a/sass/_config.sass
+++ b/sass/_config.sass
@@ -168,12 +168,12 @@ label
 			transform: scale(1)
 
 .registration
-	&-form
-		position: relative
-	.error
-		position: absolute
-		bottom: calc(100% + 20px)
-		left: 0
+	// &-form
+	// 	position: relative
+	// .error
+	// 	position: absolute
+	// 	bottom: calc(100% + 20px)
+	// 	left: 0
 
 input[type='checkbox']
 	display: none
