--- a/sass/_enter.sass
+++ b/sass/_enter.sass
@@ -1,13 +1,20 @@
 // sign-up
 
-.enter
+.enter,
+.room
   width: 100%
+  height: auto
+  min-height: calc(100vh - 48px*2)
   max-width: calc(327px + 50px)
-  margin: 38px auto
+  margin: 48px auto
+  overflow-y: auto
   .container
+    height: calc(100vh - 48px*2)
+    // min-height: 100%
     display: grid
     gap: 20px
-  
+    grid-template-rows: auto 1fr
+
   &__header
     width: 100%
     display: grid
