--- a/sass/app.sass
+++ b/sass/app.sass
@@ -1,3 +1,4 @@
 @import config
 @import enter
-@import url('https://alex-khrust.github.io/Partido/css/app.min.css')
+@import room-creating
+// @import url('https://alex-khrust.github.io/Partido/css/app.min.css')
