Правки для скролла списка member__list

--- a/sass/_enter.sass
+++ b/sass/_enter.sass
@@ -3,14 +3,15 @@
 .room
   width: 100%
   height: auto
-  max-width: calc(327px + 50px)
-  margin: 48px auto
   overflow-y: auto
   .container
-    // min-height: 100%
+    max-width: calc(327px + 50px)
+    // min-height: 100vh
+    padding: 48px 25px
+    margin: 0 auto
     display: grid
     gap: 20px
-    grid-template-rows: auto 1fr
+
 
   &__header
     width: 100%
