Добавление страницы home

--- a/sass/_config.sass
+++ b/sass/_config.sass
@@ -124,7 +124,7 @@ input, textarea
 input, textarea
 	width: 100%
 	height: auto
-	max-width: 327px
+	max-width: 377px
 	min-height: 52px
 	padding: 16px
 	background: #F5F5F5
@@ -137,6 +137,9 @@ label
 .input-box
 	width: 100%
 	position: relative
+
+.locked
+	overflow: hidden
 
 .enter__main
 	position: relative
