--- a/sass/app.sass
+++ b/sass/app.sass
@@ -1,4 +1,5 @@
 @import config
 @import enter
 @import room-creating
+@import home-feed
 // @import url('https://alex-khrust.github.io/Partido/css/app.min.css')
