--- a/sass/_room-creating.sass
+++ b/sass/_room-creating.sass
@@ -115,11 +115,7 @@
     display: flex
     align-items: center
     justify-content: center
-    font-size: 18px
-    font-weight: 800
-    line-height: 1
     grid-area: foto
-    color: #fff
     overflow: hidden
     position: relative
     img
@@ -131,11 +127,6 @@
       top: 50%
       left: 50%
       transform: translate(-50%, -50%)
-    .letter
-      display: flex
-      align-items: center
-      justify-content: center
-      line-height: 1
   &__name
     font-size: 14px
     font-weight: 600
@@ -148,6 +139,16 @@
     color: #71717B
     grid-area: tel
 
+.letter
+  width: 100%
+  height: 100%
+  display: flex
+  align-items: center
+  justify-content: center
+  font-size: 18px
+  font-weight: 800
+  color: #fff
+  line-height: 1
 
 .room-create-name
   .room__header
